# b4dcad

./: .gitignore  README.md  pyproject.toml  setup.py
b4dcad/: cli.py  core.py  gcode.py  loft.py  normals.py  path.py  preview.html  svg.py  text.py
badcad/: badcad.py  cli.py
examples/: multi_part.py
